# search

./: .env.example  .gitignore  CLAUDE.md  README.md  launch.bat  launch.sh  local-browser-agent-windows.spec  local-browser-agent.spec  pyproject.toml
.github/workflows/: release.yml
.planning/: HANDOFF.json  MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md
.planning/milestones/: v0.1.0-REQUIREMENTS.md  v0.1.0-ROADMAP.md  v0.2.0-MILESTONE-AUDIT.md  v0.2.0-REQUIREMENTS.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
agent/: __main__.py  chrome_detect.py  config.py  db.py  events.py  launcher.py  main.py  paths.py  runner.py  settings.py
agent/static/: style.css
agent/templates/: index.html  no_chrome.html  runs_fragment.html
build_scripts/: build_mac.sh  sign.sh
tests/: conftest.py
tests/integration/: test_end_to_end.py  test_guardrails.py  test_model_validation.py
tests/unit/: test_chrome_detect.py  test_config.py  test_db.py  test_disclaimer.py  test_entrypoint_phase14.py  test_events_phase10.py  test_events_phase5.py  test_events_phase6.py  test_events_phase7.py  test_events_phase8.py  test_events_phase9.py  test_events_phase9_1.py  test_guardrails.py  test_launcher.py  test_no_cdn_scripts.py  test_no_chrome_page.py  test_paths.py  test_presets_phase13.py  test_prompts_phase12.py  test_release_workflow_phase14.py  test_runner.py  test_settings_phase11.py  test_training_log.py  test_ui.py  test_windows_spec_phase14.py
training/: converter.py  train_apple.py  train_nvidia.py
(+49 files in other folders)
