[project]
name = "local-browser-agent"
version = "0.1.0"
requires-python = ">=3.11,<4.0"
dependencies = [
    "browser-use==0.12.6",
    "litellm>=1.83.0",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "httpx>=0.27",
    "pydantic-settings>=2.0",
]

[project.scripts]
agent = "agent.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-httpx>=0.30",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["agent"]
